# cv_testing

./: sandbox  sandbox.cpp
.trunk/: trunk.yaml
images/: boxes..txt  boxes.txt  towers.txt
main/: CMakeCache.txt  CMakeLists.txt  Makefile  ascii  ascii.cpp  ascii_gui  ascii_gui.cpp  ascii_video_filter  ascii_video_filter.cpp  cmake_install.cmake  image_processing.cpp  image_processing.h  sandbox.cpp  video.txt  video_2.txt  video_processing.cpp
testing/: sandbox
